--- a/xulharts/stylecomis.css
+++ b/xulharts/stylecomis.css
@@ -21,6 +21,7 @@
     height: 150px;
     padding: 20px 200px;
     position: relative;
+    z-index: 9999;
 }
 
 .container {
